--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="icon" type="image/png" href="/logo-completo.png" />
+      <link rel="icon" type="image/png" href="/fotoIcono.png" />
 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
